<resources>
    <string name="app_name">News App</string>

    <string name="message_button_retry">Retry</string>

    <string name="bottom_menu_news">Source</string>
    <string name="bottom_menu_favorites">Favorite</string>
    <string name="bottom_menu_about">About</string>

    <string name="main_pager_fragment_tag">"f%s"</string>

    <string name="temporary_sources">SOURCES</string>
    <string name="temporary_favorites">FAVORITES</string>
    <string name="temporary_articles">ARTICLES</string>
    <string name="temporary_details">DETAILS</string>
    <string name="temporary_about">ABOUT</string>
    <string name="temporary_transfer_args">Transferred argument from %s to page %s</string>

    <string name="news_notification_screen_message">This page didn\'t load the content correctly</string>

    <string name="sources_feature">Sources</string>
    <string name="sources_list_item_title">Sources title text</string>
    <string name="sources_list_item_description">Sources description text</string>
    <string name="sources_unknown_error">Sorry, something went wrong. Try again.</string>

    <string name="articles_feature">Articles</string>
    <string name="articles_text_author_and_date">Author – 2021–01–01 00:00:00</string>
    <string name="articles_title">Article title text</string>
    <string name="articles_description">Article description text</string>
    <string name="articles_mark_favorites">Mark to favorites</string>
    <string name="articles_chip_popular_today">Popular Today</string>
    <string name="articles_chip_popular_all_time">Popular all time</string>
    <string name="articles_chip_newest">Newest</string>

    <string name="details_author_and_date">Author – 2021–01–01 00:00:00</string>
    <string name="details_set_favorites">Set/unset to favorites</string>
    <string name="details_title">Article detail title</string>
    <string name="details_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="details_url"><u>https://www.urlurlurl.com/</u></string>
    <string name="details_author_and_dates">%s - %s</string>
    <string name="details_transition">DetailsCollapsingToolbarTransition</string>

    <string name="favorites_feature">Favorites</string>
    <string name="favorites_notification_screen_message">You don\'t have any favorite article</string>

    <string name="about_feature">About</string>
    <string name="about_text">The Week makes sense of the week\'s news by curating the best of the U.S. and international media into a succinct, lively digest.</string>
    <string name="about_year">© 2021</string>

    <string name="tutorial_button_next">Next</string>
    <string name="tutorial_button_done">Done</string>
    <string name="tutorial_description_variety_sources">Variety of news sources</string>
    <string name="tutorial_description_breaking_news">Breaking news</string>
    <string name="tutorial_description_save_favorites">Save and store your favorite articles</string>
</resources>