<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="199dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        tools:text="@string/articles_text_author_and_date"
        android:textAppearance="@style/Theme.NewsApp.ArticlesDate"
        android:translationY="-4.97sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="top"
        android:lineSpacingExtra="8sp"
        tools:text="@string/articles_title"
        android:textAppearance="@style/Theme.NewsApp.ArticlesTitle"
        android:textStyle="bold"
        android:translationY="-3.8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/articleIImageView"
        app:layout_constraintTop_toTopOf="@+id/articleIImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/articleIImageView"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/empty_image"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        tools:text="@string/articles_description"
        android:textAppearance="@style/Theme.NewsApp.ArticlesTitleDescription"
        android:translationY="-2.3sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleIImageView" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/favoriteCheckBox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/icon_favorites"
        android:button="@null"
        android:clickable="false"
        android:contentDescription="@string/articles_mark_favorites"
        android:gravity="center"
        android:translationY="-8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dateTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>