<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".main.news.articles.ArticlesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primaryColor"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            app:title="@string/articles_feature">

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/popularTodayChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/articles_chip_popular_today"
                android:textAlignment="center"
                android:textColor="@color/chip_text_state"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/chip_background_state" />

            <com.google.android.material.chip.Chip
                android:id="@+id/popularAllTimeChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/articles_chip_popular_all_time"
                android:textAlignment="center"
                android:textColor="@color/chip_text_state"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/chip_background_state" />

            <com.google.android.material.chip.Chip
                android:id="@+id/newestChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/articles_chip_newest"
                android:textAlignment="center"
                android:textColor="@color/chip_text_state"
                android:textSize="12sp"
                app:chipBackgroundColor="@color/chip_background_state" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeArticleRefreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/articleRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                android:visibility="visible"
                tools:listitem="@layout/fragment_articles_list_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <RelativeLayout
            android:id="@+id/articles_notification_screen"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/swipeArticleRefreshLayout"
            app:layout_constraintEnd_toEndOf="@+id/swipeArticleRefreshLayout"
            app:layout_constraintStart_toStartOf="@+id/swipeArticleRefreshLayout"
            app:layout_constraintTop_toBottomOf="@+id/chipGroup">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/empty_chair" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/news_notification_screen_message"
                android:theme="@style/Theme.NewsApp.ErrorScreenText" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>